--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* GLOBAL */
+
 html {
     box-sizing: border-box;
     font-size: 62.5%;
@@ -14,14 +16,88 @@ body {
     background: hsl(0, 0%, 90%);
     color: black;
 }
-
-a {
+p {
     font-size: 5rem;
+    font-weight: 900;
+}
+
+/* HEADER */
+
+header {
+    min-height: 10vh;
+}
+ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     list-style: none;
+}
+.info-btn {
+    padding: 0 2rem;
+}
+a {
+    font-size: 6rem;
     text-decoration: none;
     color: black;
 }
 
-p {
-    font-size: 5rem;
+/* MAIN */
+
+main {
+    min-height: 90vh;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-end;
+    padding-bottom: 5rem;
+}
+.h-div {
+    min-width: 15rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.s-div {
+    min-width: 15rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.l-div {
+    min-width: 15rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+input {
+    max-width: 10rem;
+    border: none;
+    height: 3rem;
+    font-size: 2.5rem;
+    text-align: center;
+    border-radius: 0.5rem;
+}
+.percentage {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 3rem;
+}
+.small-percentage {
+    font-size: 3rem;
+    padding-left: 0.5rem;
+    font-weight: 400;
+}
+
+/* INPUT ARROWS HIDDEN */
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type='number'] {
+    -moz-appearance: textfield;
 }
